Closed Bug 978422 Opened 11 years ago Closed 11 years ago

ReattachTextureToAnyFramebufferToWorkAroundBugs no longer needed

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file)

After we added WebGLFramebuffer::FinalizeAttachments() to handle simultaneous DEPTH/STENCIL/DEPTH_STENCIL attachments, we are now unconditionally rebinding textures to framebuffers before using them.
Attached patch patchSplinter Review
Attachment #8384084 - Flags: review?(bjacob)
Comment on attachment 8384084 [details] [diff] [review] patch Review of attachment 8384084 [details] [diff] [review]: ----------------------------------------------------------------- A "magic perfect" patch ---- pure removal of code \o/
Attachment #8384084 - Flags: review?(bjacob) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: