Bug 978422 - ReattachTextureToAnyFramebufferToWorkAroundBugs no longer needed. - r=bjacob